# shroud

./: .gitignore  BLOG.md  CMakeLists.txt  README.md  msvc-toolchain.cmake
crackme/: CMakeLists.txt  crackme.c  crackme_obfuscated.cpp
eval/: angr_cfg_results.json  angr_results.json  angr_solve.py  angr_symex_results.json  benchmark_overhead.py  diversity.py  ghidra_results.json  ida_analysis_results.json  ida_analyze.py  nop_strip.py  nop_strip_all_results.json  nop_strip_results.json
eval/benchmarks/: argparse.c  argparse.ll  argparse_final.ll  hashtable.c  hashtable.ll  hashtable_final.ll  minihttp.c  rc4.c  rc4.ll  run_benchmarks.sh  sort.c  sort.ll
include/Shroud/: MBA.h  OpaquePredicates.h  OverlappingInstructions.h  Utils.h
lib/: CMakeLists.txt  MBA.cpp  OpaquePredicates.cpp  OverlappingInstructions.cpp  Utils.cpp
paper/: main.aux  main.bbl  main.bib  main.blg  main.out  main.tex
pass/: CMakeLists.txt  MBAPass.cpp  MBAPass.h  OpaquePredicatesPass.cpp  OpaquePredicatesPass.h  OverlappingInstructionsPass.cpp  OverlappingInstructionsPass.h  PassPlugin.cpp  StringHidePass.cpp  StringHidePass.h
test/: CMakeLists.txt  IntegrationTest.cpp  MBATest.cpp  OpaquePredicatesTest.cpp  OverlappingInstructionsTest.cpp
